# fixture

./: Cargo.toml
fixture/: Cargo.toml
fixture/src/: lib.rs
fixture/tests/: main.rs
fixture_derive/: Cargo.toml
fixture_derive/src/: lib.rs
