[package]
name = "kurtbuilds_fixture"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A library for creating fixtures for testing"

[lib]
name = "fixture"

[dependencies]
kurtbuilds_fixture_derive = { version = "0.1.0", path = "../fixture_derive" }


[dev-dependencies]
pretty_assertions = "1.4.0"